--- a/html/icloud.html
+++ b/html/icloud.html
@@ -6,9 +6,20 @@
 </head>
 
 <body>
-
-<img src="https://github.com/weib0/web/blob/master/img/20200413-yunshangguizhou.png" alt="Italian Trulli">
-The content of the document......
+  2018年初苹果公司的中国内地服务全部交由一家名为云上贵州的数据中心运营公司接管，该公司由贵州国资委控制。对此，苹果公司表示：<p>
+    “与云上贵州的合作将使我们得以继续提高iCloud 服务的速度以及可靠性，同时也符合中国的云服务须由本地企业运营的新规。”</p>
+  <br>同时，苹果公司在声明中也强调，</br><p>
+“Apple拥有强大的数据隐私和安全保护机制，并且不会在我们的任何系统中创建后门。”
+  </p>
+<h3>影响范围<h3>
+  <p>申请 Apple ID 时在“国家和地区”一栏选择为“中国”的用户都在此次服务迁移之列。
+    <br>
+    也就是说，即使你目前人在国外，但用的是之前在国内申请的 Apple ID，<br>你的 iCloud 服务也会转由“云上贵州”运营</p>
+  <h3>风险：</h3>
+  <p>数据有国界，数据存储的本地化有利于当地政府监控和打击犯罪。</br>但同时，由于信息管理的规范性和对个人隐私的保护程度不同，<br>
+  中国的Apple用户可能面临着严重的隐私泄漏。<br>对此，有网友指出，可以在App Store中使用中国区帐号，而在iCloud使用外区帐号达到
+  <br>“既可以下载中国APP，又可以安全地存储个人信息"的目的</p>
+<b></b>
 
 <img src="../img/20200413-yunshangguizhou.png" alt="Italian Trulli">
 </body>
